Stop related content floating on small screens

--- a/app/assets/stylesheets/frontend/views/_topic.scss
+++ b/app/assets/stylesheets/frontend/views/_topic.scss
@@ -137,8 +137,10 @@
     }
 
     .title-block {
-      float: left;
-      width: 50%;
+      @include media(tablet) {
+        float: left;
+        width: 50%;
+      }
 
       h1 {
         padding-left: 0;
